vertical align, fixed gameState issue

--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,13 @@ body {
     font-weight: 400;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+}
+
 button {
     font-family: 'Press Start 2P', cursive;
     display: block;
